; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-deu/src/extr_ifxmips_aes.c_aes_set_key.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-deu/src/extr_ifxmips_aes.c_aes_set_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.aes_ctx = type { i32, i64 }

@CRYPTO_TFM_RES_BAD_KEY_LEN = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"ctx @%p, key_len %d, ctx->key_length %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_set_key(%struct.crypto_tfm* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.crypto_tfm*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.aes_ctx*, align 8
  %9 = alloca i64*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.crypto_tfm*, %struct.crypto_tfm** %5, align 8
  %11 = call %struct.aes_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %10)
  store %struct.aes_ctx* %11, %struct.aes_ctx** %8, align 8
  %12 = load %struct.crypto_tfm*, %struct.crypto_tfm** %5, align 8
  %13 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %12, i32 0, i32 0
  %14 = bitcast i32* %13 to i64*
  store i64* %14, i64** %9, align 8
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 16
  br i1 %16, label %17, label %30

17:                                               ; preds = %3
  %18 = load i32, i32* %7, align 4
  %19 = icmp ne i32 %18, 24
  br i1 %19, label %20, label %30

20:                                               ; preds = %17
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 32
  br i1 %22, label %23, label %30

23:                                               ; preds = %20
  %24 = load i64, i64* @CRYPTO_TFM_RES_BAD_KEY_LEN, align 8
  %25 = load i64*, i64** %9, align 8
  %26 = load i64, i64* %25, align 8
  %27 = or i64 %26, %24
  store i64 %27, i64* %25, align 8
  %28 = load i32, i32* @EINVAL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %4, align 4
  br label %47

30:                                               ; preds = %20, %17, %3
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.aes_ctx*, %struct.aes_ctx** %8, align 8
  %33 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  %34 = load %struct.aes_ctx*, %struct.aes_ctx** %8, align 8
  %35 = load i32, i32* %7, align 4
  %36 = load %struct.aes_ctx*, %struct.aes_ctx** %8, align 8
  %37 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = call i32 @DPRINTF(i32 0, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), %struct.aes_ctx* %34, i32 %35, i32 %38)
  %40 = load %struct.aes_ctx*, %struct.aes_ctx** %8, align 8
  %41 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %40, i32 0, i32 1
  %42 = load i64, i64* %41, align 8
  %43 = inttoptr i64 %42 to i32*
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @memcpy(i32* %43, i32* %44, i32 %45)
  store i32 0, i32* %4, align 4
  br label %47

47:                                               ; preds = %30, %23
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local %struct.aes_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @DPRINTF(i32, i8*, %struct.aes_ctx*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
